# AnalogIO-CAN-FW

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  STM32G431KBTX_FLASH.ld  arm-gcc-toolchain.txt  utils.cmake
cmake/: FindSTM32HAL.cmake  FindSTM32LL.cmake  add-freertos.cmake  arm-add-vectors.cmake  arm-gcc-add-custom-targets.cmake  arm-gcc-configure.cmake  arm-gcc-toolchain.cmake  arm-jlink-add-custom-targets.cmake  find-compiler.cmake  find_compiler.cmake  git-functions.cmake  stm32.cmake
drivers/BSP/: CMakeLists.txt
drivers/CMSIS/: CMakeLists.txt
drivers/HAL/: CMakeLists.txt
includes/: app_cfg.h  board.h  bsp.h  bsp_can.h  bsp_clocks.h  bsp_common_utils.h  bsp_config.h  bsp_i2c.h  bsp_io.h  bsp_irq_manager.h  bsp_tick.h  bsp_types.h  bsp_usart.h  build_defs.h  main.h  stm32f3xx_it.h  version_numbers.h
includes/common/: common_types.h
includes/internal/: bsp_can_internal.h
source/: board.c  bsp.c  bsp_can.c  bsp_clocks.c  bsp_common_utils.c  bsp_i2c.c  bsp_io.c  bsp_irq_manager.c  bsp_tick.c  bsp_usart.c  main.c  stm32f3xx_it.c  system_stm32f3xx.c  system_stm32g4xx.c  tx_initialize_low_level.c.bak  tx_initialize_low_level.s
startup/: startup_stm32f303x8.s  startup_stm32g431kbtx.s
toolchain/: arm-gcc-toolchain.cmake  build.cmake  post-build.cmake  stm32.cmake  variables.cmake
utilities/: flash_erase_script.jlink.in  flash_script.jlink.in  flash_script_final.jlink
